# RuDeFi

./: .dockerignore  .gitignore  CMakeLists.txt  DEPLOY.md  Dockerfile  README.md  dev.sh  fly.toml  render.yaml
apps/cli/: main.cpp
config/: chains.json  settings.example.json  tokens.json
include/cryptoapp/bridges/: lifi_client.hpp
include/cryptoapp/chain/: chain_config.hpp  eth_types.hpp  gas_tracker.hpp  multicall.hpp  rpc_client.hpp
include/cryptoapp/defi/: aave_v3.hpp  compound_v3.hpp  defi_types.hpp  uniswap_v3.hpp  uniswap_v3_math.hpp
include/cryptoapp/portfolio/: portfolio_scanner.hpp  scan_json.hpp
include/cryptoapp/pricing/: fx_service.hpp  price_service.hpp
include/cryptoapp/security/: approvals.hpp  goplus_client.hpp
include/cryptoapp/server/: http_server.hpp
include/cryptoapp/util/: hex.hpp  http.hpp
include/cryptoapp/yield/: llama_client.hpp
src/bridges/: lifi_client.cpp
src/chain/: chain_config.cpp  eth_types.cpp  gas_tracker.cpp  multicall.cpp  rpc_client.cpp
src/defi/: aave_v3.cpp  compound_v3.cpp  uniswap_v3.cpp  uniswap_v3_math.cpp
src/portfolio/: portfolio_scanner.cpp  scan_json.cpp
src/pricing/: fx_service.cpp  price_service.cpp
src/security/: approvals.cpp  goplus_client.cpp
src/server/: http_server.cpp
src/util/: hex.cpp  http.cpp
src/yield/: llama_client.cpp
ui/: index.html
